--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00001F;
-	background-color: #1A1325;
+	color: #000008;
+	background-color: #37AA3B;
 }
 
 .html
@@ -52,8 +52,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 18px;
+	letter-spacing: -1px;
 	text-align: left;
 	position: relative;
 	margin-right: -10000px;
@@ -90,8 +90,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 18px;
+	letter-spacing: -1px;
 	text-align: right;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -136,8 +136,8 @@
 	background-color: transparent;
 	font-size: 12px;
 	color: #FCA9DB;
-	letter-spacing: 0px;
 	line-height: 12px;
+	letter-spacing: 0px;
 	text-align: center;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -152,9 +152,9 @@
 	width: 470px;
 	min-height: 81px;
 	background-color: transparent;
-	color: #FCA9DB;
-	font-size: 28px;
 	line-height: 56px;
+	font-size: 28px;
+	color: #FCA9DB;
 	text-align: center;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -261,8 +261,8 @@
 	background-color: transparent;
 	font-size: 24px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 29px;
+	letter-spacing: -1px;
 	text-align: center;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -295,8 +295,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -312,8 +312,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -330,8 +330,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -348,8 +348,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -388,8 +388,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -405,8 +405,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -423,8 +423,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -441,8 +441,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: left;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
@@ -480,8 +480,8 @@
 	background-color: transparent;
 	font-size: 18px;
 	color: #FCA9DB;
-	letter-spacing: -1px;
 	line-height: 22px;
+	letter-spacing: -1px;
 	text-align: center;
 	font-family: maven-pro, sans-serif;
 	font-weight: 400;
