모바일 대응.

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00000D;
-	background-color: #B512BC;
+	color: #000009;
+	background-color: #564ABF;
 }
 
 .html
@@ -97,8 +97,8 @@
 
 #u134
 {
-	font-size: 15px;
-	line-height: 15px;
+	font-size: 14px;
+	line-height: 14px;
 }
 
 #u101-8
