SUBBEAT 웹사이트 업데이트

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000011;
-	background-color: #824B19;
+	color: #000002;
+	background-color: #E34150;
 }
 
 .html
@@ -13,11 +13,12 @@
 {
 	z-index: 1;
 	width: 964px;
-	min-height: 987px;
+	min-height: 986.8500000000001px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -39,6 +40,44 @@
 	font-size: 100px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
+	margin-right: -10000px;
+}
+
+#u120-4
+{
+	z-index: 55;
+	width: 144px;
+	min-height: 20px;
+	background-color: transparent;
+	line-height: 14px;
+	letter-spacing: 0px;
+	font-size: 12px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 58px;
+	left: 656px;
+}
+
+#u121-4
+{
+	z-index: 59;
+	width: 144px;
+	min-height: 20px;
+	background-color: transparent;
+	opacity: 0.25;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
+	filter: alpha(opacity=25);
+	line-height: 14px;
+	letter-spacing: 0px;
+	font-size: 12px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 58px;
+	left: 820px;
 }
 
 #pu78-37
@@ -94,7 +133,7 @@
 
 #u80-6
 {
-	z-index: 55;
+	z-index: 63;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -108,7 +147,7 @@
 
 #u81-6
 {
-	z-index: 101;
+	z-index: 115;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -123,7 +162,7 @@
 
 #u94-4
 {
-	z-index: 107;
+	z-index: 121;
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
@@ -149,14 +188,14 @@
 	position: relative;
 }
 
-#pu80-6,#pu97-6
+#pu75-4,#pu80-6,#pu97-6
 {
 	width: 0.01px;
 }
 
 #u97-6
 {
-	z-index: 69;
+	z-index: 77;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -170,182 +209,6 @@
 }
 
 #u98-6
-{
-	z-index: 141;
-	width: 82px;
-	min-height: 40px;
-	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-	left: 226px;
-}
-
-#u99-4
-{
-	z-index: 115;
-	width: 226px;
-	min-height: 60px;
-	background-color: transparent;
-	line-height: 15px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-}
-
-#u83-8
-{
-	z-index: 61;
-	width: 226px;
-	min-height: 70px;
-	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u84-6
-{
-	z-index: 135;
-	width: 82px;
-	min-height: 40px;
-	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-	left: 226px;
-}
-
-#u95-4
-{
-	z-index: 111;
-	width: 226px;
-	min-height: 30px;
-	background-color: transparent;
-	line-height: 15px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-}
-
-#u85-6
-{
-	z-index: 95;
-	width: 226px;
-	min-height: 50px;
-	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u86-6
-{
-	z-index: 165;
-	width: 82px;
-	min-height: 40px;
-	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-	left: 226px;
-}
-
-#u96-4
-{
-	z-index: 119;
-	width: 226px;
-	min-height: 20px;
-	background-color: transparent;
-	line-height: 15px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-}
-
-#u89-6
-{
-	z-index: 75;
-	width: 226px;
-	min-height: 50px;
-	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u90-6
-{
-	z-index: 147;
-	width: 82px;
-	min-height: 40px;
-	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-	left: 226px;
-}
-
-#u104-4
-{
-	z-index: 123;
-	width: 226px;
-	min-height: 20px;
-	background-color: transparent;
-	line-height: 15px;
-	font-size: 10px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-}
-
-#u107-8
-{
-	z-index: 87;
-	width: 226px;
-	min-height: 70px;
-	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
-	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u105-6
 {
 	z-index: 159;
 	width: 82px;
@@ -361,11 +224,11 @@
 	left: 226px;
 }
 
-#u106-4
+#u99-4
 {
-	z-index: 131;
+	z-index: 129;
 	width: 226px;
-	min-height: 30px;
+	min-height: 60px;
 	background-color: transparent;
 	line-height: 15px;
 	font-size: 10px;
@@ -374,17 +237,11 @@
 	position: relative;
 }
 
-#pu83-8,#pu85-6,#pu89-6,#pu107-8,#pu108-6
+#u83-8
 {
-	width: 0.01px;
-	margin-top: 20px;
-}
-
-#u108-6
-{
-	z-index: 81;
+	z-index: 69;
 	width: 226px;
-	min-height: 50px;
+	min-height: 70px;
 	background-color: transparent;
 	line-height: 22px;
 	letter-spacing: 0px;
@@ -395,7 +252,7 @@
 	margin-right: -10000px;
 }
 
-#u110-6
+#u84-6
 {
 	z-index: 153;
 	width: 82px;
@@ -411,9 +268,242 @@
 	left: 226px;
 }
 
+#u95-4
+{
+	z-index: 125;
+	width: 226px;
+	min-height: 30px;
+	background-color: transparent;
+	line-height: 15px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
+#u117-6
+{
+	z-index: 109;
+	width: 226px;
+	min-height: 50px;
+	background-color: transparent;
+	line-height: 22px;
+	letter-spacing: 0px;
+	font-size: 18px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u118-6
+{
+	z-index: 189;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	letter-spacing: 0px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
+#u119-4
+{
+	z-index: 137;
+	width: 226px;
+	min-height: 20px;
+	background-color: transparent;
+	line-height: 15px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
+#u85-6
+{
+	z-index: 103;
+	width: 226px;
+	min-height: 50px;
+	background-color: transparent;
+	line-height: 22px;
+	letter-spacing: 0px;
+	font-size: 18px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u86-6
+{
+	z-index: 183;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	letter-spacing: 0px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
+#u96-4
+{
+	z-index: 133;
+	width: 226px;
+	min-height: 20px;
+	background-color: transparent;
+	line-height: 15px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
+#u89-6
+{
+	z-index: 83;
+	width: 226px;
+	min-height: 50px;
+	background-color: transparent;
+	line-height: 22px;
+	letter-spacing: 0px;
+	font-size: 18px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u90-6
+{
+	z-index: 165;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	letter-spacing: 0px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
+#u104-4
+{
+	z-index: 141;
+	width: 226px;
+	min-height: 20px;
+	background-color: transparent;
+	line-height: 15px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
+#pu83-8,#pu117-6,#pu85-6,#pu89-6,#pu107-8
+{
+	width: 0.01px;
+	margin-top: 20px;
+}
+
+#u107-8
+{
+	z-index: 95;
+	width: 226px;
+	min-height: 70px;
+	background-color: transparent;
+	line-height: 22px;
+	letter-spacing: 0px;
+	font-size: 18px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u105-6
+{
+	z-index: 177;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	letter-spacing: 0px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
+#u106-4
+{
+	z-index: 149;
+	width: 226px;
+	min-height: 30px;
+	background-color: transparent;
+	line-height: 15px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
+#pu108-6
+{
+	width: 0.01px;
+	margin-left: 656px;
+	margin-top: 19px;
+}
+
+#u108-6
+{
+	z-index: 89;
+	width: 226px;
+	min-height: 50px;
+	background-color: transparent;
+	line-height: 22px;
+	letter-spacing: 0px;
+	font-size: 18px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u110-6
+{
+	z-index: 171;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	letter-spacing: 0px;
+	font-size: 10px;
+	color: #000000;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
 #u109-4
 {
-	z-index: 127;
+	z-index: 145;
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
@@ -422,15 +512,13 @@
 	color: #000000;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
-	top: -1px;
-	margin-bottom: -1px;
 	position: relative;
 }
 
 #pu112-4
 {
 	width: 0.01px;
-	margin-top: 96px;
+	margin-top: 23px;
 }
 
 #u112-4
@@ -449,7 +537,7 @@
 
 #u114
 {
-	z-index: 171;
+	z-index: 195;
 	width: 964px;
 	border-style: none;
 	border-color: transparent;
@@ -462,7 +550,7 @@
 
 #u79-4
 {
-	z-index: 172;
+	z-index: 196;
 	width: 308px;
 	min-height: 20px;
 	background-color: transparent;
@@ -477,7 +565,7 @@
 
 #u115-4
 {
-	z-index: 176;
+	z-index: 200;
 	width: 308px;
 	min-height: 20px;
 	background-color: transparent;
