--- a/phone/css/index.css
+++ b/phone/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000009;
-	background-color: #FB72FB;
+	color: #00000C;
+	background-color: #86D031;
 }
 
 @-ms-viewport
@@ -47,20 +47,21 @@
 
 #page_position_content
 {
-	margin-top: -30px;
+	margin-top: -28px;
 	margin-bottom: -61px;
 }
 
 #u142-4
 {
 	z-index: 2;
-	width: 320px;
+	width: 299px;
 	min-height: 60px;
 	background-color: transparent;
 	line-height: 60px;
 	letter-spacing: -3px;
 	font-size: 60px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 10px;
 	position: relative;
 }
 
@@ -68,7 +69,7 @@
 {
 	width: 0.01px;
 	margin-left: 10px;
-	margin-top: 9px;
+	margin-top: 7px;
 }
 
 #u147-4
@@ -546,7 +547,7 @@
 #pu172-4
 {
 	width: 0.01px;
-	margin-top: 63px;
+	margin-top: 62px;
 }
 
 #u172-4
@@ -608,7 +609,7 @@
 #u173-bw
 {
 	z-index: 194;
-	margin-top: 26px;
+	margin-top: 27px;
 	height: 45px;
 }
 
