--- a/phone/css/index.css
+++ b/phone/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00000C;
-	background-color: #86D031;
+	color: #000019;
+	background-color: #D86C52;
 }
 
 @-ms-viewport
@@ -547,7 +547,7 @@
 #pu172-4
 {
 	width: 0.01px;
-	margin-top: 62px;
+	margin-top: 63px;
 }
 
 #u172-4
@@ -609,7 +609,7 @@
 #u173-bw
 {
 	z-index: 194;
-	margin-top: 27px;
+	margin-top: 26px;
 	height: 45px;
 }
 
