--- a/phone/css/index.css
+++ b/phone/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000019;
-	background-color: #D86C52;
+	color: #00001B;
+	background-color: #0DC057;
 }
 
 @-ms-viewport
@@ -74,7 +74,7 @@
 
 #u147-4
 {
-	z-index: 26;
+	z-index: 22;
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
@@ -89,7 +89,7 @@
 
 #u148-4
 {
-	z-index: 30;
+	z-index: 26;
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
@@ -151,10 +151,10 @@
 	left: 206px;
 }
 
-#u146-4
+#u176-4
 {
-	z-index: 22;
-	width: 210px;
+	z-index: 199;
+	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
 	font-size: 10px;
@@ -167,7 +167,7 @@
 
 #u149-36
 {
-	z-index: 34;
+	z-index: 30;
 	width: 299px;
 	min-height: 600px;
 	background-color: transparent;
@@ -187,7 +187,7 @@
 
 #u150-4
 {
-	z-index: 70;
+	z-index: 66;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -209,7 +209,7 @@
 
 #u152-6
 {
-	z-index: 82;
+	z-index: 78;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -224,7 +224,7 @@
 
 #u166-6
 {
-	z-index: 154;
+	z-index: 150;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -240,7 +240,7 @@
 
 #u159-4
 {
-	z-index: 124;
+	z-index: 120;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
@@ -255,7 +255,7 @@
 
 #u151-8
 {
-	z-index: 74;
+	z-index: 70;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
@@ -270,7 +270,7 @@
 
 #u165-6
 {
-	z-index: 148;
+	z-index: 144;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -286,7 +286,7 @@
 
 #u158-4
 {
-	z-index: 120;
+	z-index: 116;
 	width: 196px;
 	min-height: 50px;
 	background-color: transparent;
@@ -300,7 +300,7 @@
 
 #u157-6
 {
-	z-index: 114;
+	z-index: 110;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -315,7 +315,7 @@
 
 #u171-6
 {
-	z-index: 184;
+	z-index: 180;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -331,7 +331,7 @@
 
 #u161-4
 {
-	z-index: 132;
+	z-index: 128;
 	width: 196px;
 	min-height: 30px;
 	background-color: transparent;
@@ -345,7 +345,7 @@
 
 #u156-6
 {
-	z-index: 108;
+	z-index: 104;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -360,7 +360,7 @@
 
 #u170-6
 {
-	z-index: 178;
+	z-index: 174;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -376,7 +376,7 @@
 
 #u160-4
 {
-	z-index: 128;
+	z-index: 124;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -397,7 +397,7 @@
 
 #u153-6
 {
-	z-index: 88;
+	z-index: 84;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -412,7 +412,7 @@
 
 #u167-6
 {
-	z-index: 160;
+	z-index: 156;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -428,7 +428,7 @@
 
 #u162-4
 {
-	z-index: 136;
+	z-index: 132;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -449,7 +449,7 @@
 
 #u155-8
 {
-	z-index: 100;
+	z-index: 96;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
@@ -464,7 +464,7 @@
 
 #u169-6
 {
-	z-index: 172;
+	z-index: 168;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -480,7 +480,7 @@
 
 #u164-4
 {
-	z-index: 144;
+	z-index: 140;
 	width: 196px;
 	min-height: 30px;
 	background-color: transparent;
@@ -501,7 +501,7 @@
 
 #u154-6
 {
-	z-index: 94;
+	z-index: 90;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -516,7 +516,7 @@
 
 #u168-6
 {
-	z-index: 166;
+	z-index: 162;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -532,7 +532,7 @@
 
 #u163-4
 {
-	z-index: 140;
+	z-index: 136;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -552,7 +552,7 @@
 
 #u172-4
 {
-	z-index: 190;
+	z-index: 186;
 	width: 299px;
 	min-height: 75px;
 	background-color: transparent;
@@ -567,7 +567,7 @@
 
 #u173
 {
-	z-index: 194;
+	z-index: 190;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
@@ -576,7 +576,7 @@
 
 #u174-4
 {
-	z-index: 195;
+	z-index: 191;
 	width: 100px;
 	min-height: 20px;
 	background-color: transparent;
@@ -592,7 +592,7 @@
 
 #u175-4
 {
-	z-index: 199;
+	z-index: 195;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -608,7 +608,7 @@
 
 #u173-bw
 {
-	z-index: 194;
+	z-index: 190;
 	margin-top: 26px;
 	height: 45px;
 }
